# four-dx

./: LICENSE.md
edgeware/smart-contracts/: Cargo.toml  lib.rs
ethereum/smart-contracts/: README.md  buidler.config.js  package-lock.json  package.json
ethereum/smart-contracts/contracts/: Documents.sol  Greeter.sol  PreSignedDocuments.sol
ethereum/smart-contracts/test/: Documents.js  PreSignedDocuments.js
solana/smart-contracts/: README.md
solana/smart-contracts/src/client/: documents.ts  hello_world.ts  main.ts
solana/smart-contracts/src/client/documents/: Service.ts  instruction.ts  state.ts
solana/smart-contracts/src/program/: Cargo.toml
solana/smart-contracts/src/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
solana/smart-contracts/src/program/tests/: lib.rs  program_test.rs
