
[package]
name = "solana-bpf-documents"
version = "1.0.0"
authors = ["Denis Jazbec <denis.jazbec@smartee.io>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.12"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.7.12"
solana-sdk = "=1.7.12"

[lib]
name = "documents"
crate-type = ["cdylib", "lib"]
